fix: make sure `c-navbar` has the highest `z-index`

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -230,6 +230,7 @@ footer {
   align-items: center;
   padding: var(--spacing-huge) var(--spacing-extrahuge);
   box-sizing: border-box;
+  z-index: 9999;
 }
 
 .c-navbar ul {
